2010-04-23  Rik <octave@nomad.inbox5.com>

	* optimization/gplot.m: Eliminate parsing error for NaN inside of matrix 
   declaration.

2010-04-22  Rik <octave@nomad.inbox5.com>

	* optimization/sqp.m: Return correct value (101) on succes.  Fixes bug #29577

2010-04-22  Rik <octave@nomad.inbox5.com>

	* optimization/glpk.m: Eliminate repmat (Inf, x , y) and just use Inf (x,y)

2010-04-22  Rik <octave@nomad.inbox5.com>

	* general/rat.m, sparse/gplot.m, strings/base2dec.m, geometry/triplot.m
     optimization/sqp.m, optimization/qp.m, statistics/base/run_count.m,
     statistics/base/ranks.m: Eliminate NaN*ones and Inf*ones constructs
     and just use Nan() and Inf()

2010-04-19  Ben Abbott <bpabbott@mac.com>

	* /plot/colorbar.m: Allow 'peer' option to be specified.
	* /plot/colorbar.m: Consistent treatment of plotboxaspectratio, and
	add listener for plotboxaspectratiomode.
	* /plot/axis.m: Consistent treatment of plotboxaspectratio.
	* /plot/__go_draw_axes__.m: Consistently determine axes position.

2010-04-17  Ben Abbott <bpabbott@mac.com>

	* plot/private/__actual_axis_position__.m: Fix bug when restoring
	figure position property to its original value.

2010-04-16  David Bateman  <dbateman@free.fr>

	* plot/__go_draw_figure__.m: Pass bg_is_set to __go_draw_axes__. Don't
	unset the background figure color.
	* plot/__go_draw_axes__.m: Unset the background figure color here.

	* statistics/distributions/*: Replace constructs like "NaN * one()"
	with "NaN()" and  "Inf * ones ()" with "Inf()".

2010-04-15  David Bateman  <dbateman@free.fr>

	* statistics/distributions/discrete_pdf.m: Reimplement using lookup.
	* statistics/distributions/discrete_inv.m: Reimplement using lookup.
	* statistics/distributions/discrete_cdf.m: typo in last patch.

2010-04-15  Jaroslav Hajek  <highegg@gmail.com>

	* statistics/distributions/stdnormal_cdf.m: Calculate using erfc.

2010-04-13  David Bateman  <dbateman@free.fr>

	* statistics/discrete_cdf.m: Reimplement using lookup.
